# prompt-eval

./: .gitignore  AGENTS.md  GOAL.md  GOAL_v2.md  README.md  chat_goal.md  evaluation-results.html  evaluation-results.json  generate-html-report.js  ground_truth_v2.json  package-lock.json  package.json  promptfooconfig.yaml  pyproject.toml  refactor_gt.md  requirements-chatbot.txt
artifacts/: README.md
artifacts/fixtures/: evaluation-results.html  results.html
configs/: promptfoo.yaml
datasets/benefit_start_date/: README.md  eval-cases.yaml  vars.csv
docs/: business_dictionary.md  data_quality_report.md  database_overview.md  evaluation-strategy.md  query_design_methodology.md  relationship_map.md  schema_catalog.md  stage2_readiness.md
evaluation/chatbot/: evaluate_extraction_accuracy.py
evaluation/ground_truth/: ground_truth_v2_refactor_audit.csv  ground_truth_v2_review.md  manifest.json  rejected_questions.md  rejected_questions_v2.md  stage1_questions.jsonl  stage1_questions.md  stage1_questions_v2.jsonl  (+1 more)
extraction_prompts/: 01_direct.txt  03_chain_of_thought.txt  04_qa_format.txt  05_emphasis.txt
scripts/: chat_smoke.py  evaluate_chatbot.py  generate-html-report.js  sihrd5_stage1.py  sync_ground_truth_v2.py  validate_ground_truth_v2_json.py  verify_stage1.py
tests/: test_answer_synthesizer.py  test_api.py  test_artifacts.py  test_audit.py  test_duckdb_executor.py  test_evaluation.py  test_extraction_accuracy_evaluator.py  test_ground_truth_v2_contract.py  test_intent.py  test_related_context.py  test_schema_context.py  test_sql_validator.py
(+231 files in other folders)
